--- a/public/front/style.css
+++ b/public/front/style.css
@@ -379,7 +379,7 @@ textarea {
   text-align: center;
 }
 .content p{
-  text-align: center;
+  text-align: justify;
   word-break: break-all;
 }
 .blog-routes p{
@@ -417,10 +417,63 @@ textarea {
   fill :red;
   font-size: 25px;
 }
+.login form{
+  background-color: #eee;
+  padding: 30px;
+  margin: 0 auto;
+  margin-top: 5em;
+  width: 40%;
+  border-radius: 7px;
+}
+.login input:focus{
+  border: 0;
+  box-shadow: none;
+  border-color: #636b6f;
+}
+.login button{
+  border: 1px solid #636b6f;
+  background-color: #636b6f;
+}
+.login button:hover{
+  border: 1px solid #636b6f;
+  box-shadow: none;
+  color: inherit;
+  box-shadow: 2px 2px;
+  background-color: inherit;
+}
 
-
-
-
+.login button:focus{
+  border: 0;
+  box-shadow: none !important;
+  background-color: #636b6f;
+}
+.login button:active{
+  box-shadow: none;
+  border: 0;
+  background-color: #636b6f !important;
+}
+.blog a,
+.blog a:hover{
+  color:inherit;
+  text-decoration: none;
+}
+.header .menu{
+  height: 3em;
+  display: flex;
+  align-items: center;
+  border-bottom: 3px solid #636b6f;
+}
+.header ul{
+  margin: 0;
+}
+.header ul li{
+  display: inline;
+  margin-left: 1em;
+  font-weight: bold;
+}
+.header ul li:first-child{
+  margin-left: 0;
+}
 
 
 
