--- a/public/front/style.css
+++ b/public/front/style.css
@@ -24,6 +24,11 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+a{
+  text-decoration: none !important;
+  color: inherit !important;
+}
+
 /* make sure to set some focus styles for accessibility */
 :focus {
     outline: 0;
@@ -375,14 +380,14 @@ textarea {
   font-weight: bold;
   /* word-break: break-all; */
 }
-.content{
+/* .content{
   text-align: center;
 }
 .content p{
   text-align: justify;
   word-break: break-word;
-}
-.blog-routes p{
+} */
+/* .blog-routes p{
   text-align: center;
   color:#fff !important;
   padding: 5px 15px;
@@ -390,7 +395,7 @@ textarea {
   font-weight: bold;
   font-size: 25px;
   text-decoration: none !important;
-}
+} */
 
 /* widgets css */
 
@@ -452,7 +457,7 @@ textarea {
   border: 0;
   background-color: #636b6f !important;
 }
-.blog{
+/* .blog{
   width: 40%;
   margin: 0 auto;
 }
@@ -463,7 +468,7 @@ textarea {
 .blog a:hover{
   color:inherit;
   text-decoration: none;
-}
+} */
 .header .menu{
   height: 3em;
   display: flex;
@@ -506,10 +511,12 @@ textarea {
 }
 .col-md-3,
 .col-md-9,
+.col-md-4,
+.col-md-12,
 .container{
   padding: 0 !important;
 }
-.blog-info{
+/* .blog-info{
   display: flex;
   height: auto;
   align-items: center;
@@ -530,7 +537,7 @@ textarea {
 }
 .blog-info svg{
   color: #c3c3c3;
-}
+} */
 
 
 .h-header{
@@ -644,12 +651,94 @@ main .image{
   margin-left: 15%;
   margin-right: 15%;
   border-radius: 15%;
+  border: 10px solid #eaeb2d;
   box-shadow: 5px 5px 10px 0px #dadada;
 }
-
-
-
-
+/* BLOG */
+.blog{
+  height: auto;
+  background: url(pattern.png) no-repeat;
+}
+.blog .banner{
+  background-color: #f9f9f9;
+  height: 6em;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #eaeb2d;
+}
+.blog .banner h3{
+  font-weight: bold;
+  font-size: 40px;
+  margin: 0;
+}
+.blog-single .banner{
+  background-color: #f9f9f9;
+  height: auto;
+  padding-bottom: 1em;
+  padding-top: 1em;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #eaeb2d;
+}
+.blog-single .banner h3{
+  font-weight: bold;
+  margin: 0;
+  font-size: 30px;
+}
+.blog .date-text p{
+  text-align: left;
+  font-style: italic;
+}
+.blog .content .blog-info{
+  display: flex;
+  justify-content: center;
+}
+.blog .content svg{
+  position: relative;
+  top: 3px;
+  margin-right: 1em;
+}
+.blog .content .card{
+  margin-top: 2.5em;
+  box-shadow: 3px 3px 10px -5px #848484;
+}
+.blog .content p{
+  margin: 0;
+}
+.blog .content .card h5{
+  font-weight: bold;
+  margin: 0;
+}
+.blog .content .border-secondary{
+  border-color: #eaeb2d !important;
+}
+.blog .text-secondary{
+  background-color: #f9f9f9;
+}
+.blog .card-footer a{
+  color: #eaeb32 !important;
+  font-weight: bold;
+}
+.blog .card-footer{
+  background-color: #2d2d2d !important;
+}
+.col-md-4{
+  padding: 0 !important;
+}
+hr{
+  margin-top: 8px!important;
+  margin-bottom: 8px!important;
+}
+.blog-single{
+  height: auto;
+  background: url(pattern.png) no-repeat;
+}
+.blog-single p{
+  text-align: justify;
+}
+.blog-single .single .container{
+  max-width: 900px;
+}
 
 
 
